--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Lucy <lucy@absolucy.moe>"]
 license = "MIT or Apache-2.0"
 
 [dependencies]
+constant_time_eq = "0.2.2"
 digest = "0.10.3"
 hmac = { version = "0.12.1", features = ["reset"] }
 
@@ -14,5 +15,5 @@ default = ["std"]
 std = ["digest/std", "hmac/std"]
 
 [dev-dependencies]
-hex-literal = "0.3.4"
 sha1 = "0.10.1"
+sha2 = "0.10.2"
